--- a/listing-service/package.json
+++ b/listing-service/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo",
     "watch": "babel-watch -L src/index.js"
   },
   "devDependencies": {
@@ -12,5 +14,10 @@
     "@babel/preset-env": "^7.9.5",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-watch": "^7.0.0"
+  },
+  "dependencies": {
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.6",
+    "sequelize-cli": "^5.5.1"
   }
 }
