--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,5 +1,27 @@
 {
+  "name": "api-gateway",
+  "version": "1.0.0",
+  "main": "babel.config.js",
+  "scripts": {
+    "watch": "babel-watch -L src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
     "babel-watch": "^7.0.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "apollo-server": "^2.12.0",
+    "apollo-server-express": "^2.12.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
